# StockMarketTA

./: Pasted-Box-1-Panel-1-Candle-patterns-1-Red-candle-a-bullish-signal-hinting-that-there-is-an-uptrend--1734074690288.txt  Pasted-Thread-MainThread-missing-ScriptRunContext-This-warning-can-be-ignored-when-running-in-bare-mode-1733711734040.txt  Pasted-from-polygon-rest-import-RESTClient-import-pandas-as-pd-from-datetime-import-datetime-timedelta-imp-1734853263928.txt  Pasted-import-plotly-graph-objects-as-go-from-plotly-subplots-import-make-subplots-import-pandas-as-pd-cla-1733934851775.txt  Pasted-rohan-Rohans-MBP-StockMarketTA2-usr-local-bin-python3-Users-rohan-Documents-StockMarketTA2-Main--1733716179814.txt  README.md  backtester.py  data_handler.py  fintel_data_handler.py  indicators.py  main.py  market_insights.py  pyproject.toml  scanner.py
