[project]
name = "repl-nix-tradingsignalgenerator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polygon-api-client>=1.14.2",
    "streamlit>=1.40.2",
    "yfinance>=0.2.50",
    "alpha-vantage>=3.0.0",
    "polygon>=1.2.6",
    "twilio>=9.4.1",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
